@@ -1,3 +1,6 @@
+2 January 2014: Wouter
+	- Log ip address for sendto failures.
+
 3 December 2013: Matthijs
 	- Support for CAA RRtype (RFC 6844).
 	- Bugfix #509: USE_ZONE_STATS uses initialised memory for statistics data.
